--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 ---
 layout: default
-title: "Home!"
+title: "Happy Jekylling!"
 ---
+<div class="Main-Container">
 
-<div class="slideshow-container">
-          <div class="mySlides fade container">
-            <img src="../assets/images/Wam.jpg" >
-            <button class="btn"><a class="sliderLink" href="/about.html">About me</a></button>
-          </div>
-        
-          <div class="mySlides fade container">
-            <img src="../assets/images/WowBigSlide.jpg">
-            <button class="btn"><a class="sliderLink" href="/wow.html">World of Warcraft</a></button>
-          </div>
-        
-          <div class="mySlides fade container">
-            <img src="../assets/images/SCBigSlide.png">
-            <button class="btn"><a class="sliderLink" href="/bdo.html">Black Desert</a></button>
-          </div>
-        </div>
-<div class="tbody">
- <div class="left">Abvgd</div>
- <div class="right">LEFT</div>
 
-   
+
+
+<a class="div-link1" href="/code.html">
+    <img src="assets/images/Atom.gif">
+    <p>The code experience <br>I have learned since <br>I began to practice<br> All coding stuff</p>
+</a>
+
+
+<a class="div-link2" href=/About.html>
+
+
+
+</a>
+ 
+
+
+
 
 
 </div>
 
 
-
-        <script src="assets/scipts/slide/slide.js"></script>
